feature: add bloom filters + update tests